# DocuMentor-Suite

./: README.md  poetry.md  pyproject copy.toml  pyproject.toml  test_markdown_analyzer.md
API/: analyzer_service.py  main.py  models.py  training_service.py
Bot/: EAN-Extraktor_pro-dokument.py  Kompatibilitetsextraktor för _pro-dokument.py  Teknisk Specifikationsextraktor för _pro-dokument.py  main.py
Bot/config/: app_config.json
Bot/converted_docs/: conversion_log_2025-02-16_00-04-06.md
Bot/integrated_data/: command_response_report_20250223_002919.json  command_response_report_20250223_002919.md  command_validation_report_20250223_002919.json  command_validation_report_20250223_002919.md  image_transfer_report.json  image_transfer_report.md  integration_report_20250223_002304.json  integration_report_20250223_002304.md
Bot/modules/: chat_frame.py  data_processor.py  (+4 more)
Pyside6_Not-Done/: dataset_tab.py  main.py  main_window.py  processing_tab.py  settings_tab.py  theme_manager.py  training_tab.py
React_Not-Done/: README.md  babel.config.js  package-lock.json  package.json  tailwind.config.js
Test_Enviroment_Microserices/: Train_LoRA_main - kopia.py  Train_LoRA_main copy.py  combine_model copy 4.py  combine_model.py  conversion_config.yaml  convert.md  convert_json_to_parquet.py  cut_token_json.py  duplicates_config.yaml  file_checker.py  filter_config.yaml  grab_all_json.py  reformat_trainingdata.py  torch_test.py  torch_verson.py
markdown_analyzer/: DOC.md  __init__.py  __main__.py  analyzer.py  config.py  pytest.ini  setup.py  types.md  validators.py
(+5556 files in other folders)
